[package]
name = "denshaded-tools"
version = "0.1.0"
authors = ["SteveXMH <stevexmh@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1.0.40"
byteorder = "1.4.3"
encoding_rs = "0.8.28"
lazy_static = "1.4.0"
memmap = "0.7.0"
walkdir = "2.3.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
